force-app/main/default/objects/Polaris_SKU_Mapping_V2__c/Polaris_SKU_Mapping_V2__c.object-meta.xml
<CustomObject>
    <description>SOX object - As the name suggests, mapping of V1 products to V2 products is stored in this object</description>
    <label>Polaris SKU Mapping V2</label>
    <nameField>
        <label>Polaris SKU Mapping V2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Polaris SKU Mapping V2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>