force-app/main/default/objects/Polaris_SKU_Mapping_V2__c/fields/Feature_Name_on_New_Product__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name_on_New_Product__c</fullName>
    <label>Feature Name on New Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>