force-app/main/default/objects/Polaris_SKU_Mapping_V2__c/fields/New_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Polaris SKU Mapping V2 (New Product)</relationshipLabel>
    <relationshipName>Polaris_SKU_Mapping_V21</relationshipName>
    <type>Lookup</type>
</CustomField>