force-app/main/default/objects/Polaris_SKU_Mapping_V2__c/fields/Old_Product__c.field-meta.xml
<CustomField>
    <fullName>Old_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Polaris SKU Mapping V2</relationshipLabel>
    <relationshipName>Polaris_SKU_Mapping_V2</relationshipName>
    <type>Lookup</type>
</CustomField>