force-app/main/default/objects/Polaris_SKU_Mapping_V2__c/fields/Payment_Option__c.field-meta.xml
<CustomField>
    <fullName>Payment_Option__c</fullName>
    <label>Payment Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prepay</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Pay Annual</fullName>
                <isActive>false</isActive>
                <label>Pay Annual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>