force-app/main/default/objects/Polaris_SKU_Mapping_V2__c/fields/Quantity_Mapping_Type__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Mapping_Type__c</fullName>
    <label>Quantity Mapping Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appliance Based</fullName>
            </value>
            <value>
                <fullName>Ratio Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>