force-app/main/default/objects/Polaris_SKU_Mapping_V2__c/fields/Quantity_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Ratio__c</fullName>
    <description>Add rule to be required if &apos;Ratio Based&apos; is selected in the quantity mapping picklist</description>
    <label>Quantity Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>