force-app/main/default/objects/Polaris_SKU_Mapping_V2__c/fields/Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Support_Type__c</fullName>
    <label>Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
            <value>
                <fullName>L3 Basic</fullName>
                <label>LB</label>
            </value>
            <value>
                <fullName>Basic</fullName>
                <label>BS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>