force-app/main/default/objects/Polaris_SKU_Mapping_V2__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>New_Product__c</columns>
    <columns>Old_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>